tp/3.0/demo-app-svc.yaml

---

apiVersion: v1
kind: Service
metadata:
  name: ${USER_NAME}
spec:
  selector:
    app: ${USER_NAME}

  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
